tests/suite/fail/generated/types/fail_mod_bool_bool.ny
fn main() {
    let _ = true % true //~ ERROR Type mismatch in arithmetic
}
